tests/snapshots/examples_fixtures/advanced__functional_pipeline.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/advanced/functional_pipeline.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/advanced/functional_pipeline.flx:37:19
   |
37 |     let doubled = map(numbers, /x -> x * 2)
   |                   ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/advanced/functional_pipeline.flx:41:19
   |
41 |     let bigNums = filter(numbers, /x -> x > 3)
   |                   ^^^^^^

Hint:
  Define it first: let filter = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/advanced/functional_pipeline.flx:45:17
   |
45 |     let total = fold(numbers, 0, /(acc, x) -> acc + x)
   |                 ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/advanced/functional_pipeline.flx:49:24
   |
49 |     let totalProduct = fold(numbers, 1, /(acc, x) -> acc * x)
   |                        ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `first`.

  examples/advanced/functional_pipeline.flx:75:5
   |
75 |     first(names) |> upper |> print
   |     ^^^^^

Hint:
  Define it first: let first = ...;


error[E004]: Undefined Variable

I can't find a value named `first`.

  examples/advanced/functional_pipeline.flx:76:5
   |
76 |     first(rest(names)) |> upper |> print
   |     ^^^^^

Hint:
  Define it first: let first = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/advanced/functional_pipeline.flx:83:22
   |
83 |     let uppercased = map(words, /w -> w |> upper)
   |                      ^^^

Hint:
  Define it first: let map = ...;

Found 7 errors.
== stdout ==
<not executed>
